[gd_scene load_steps=3 format=3 uid="uid://bq7evafx53mqo"]

[ext_resource type="Script" path="res://scenes/world/reward/reward.gd" id="1_57cg7"]
[ext_resource type="SpriteFrames" uid="uid://bui3yd7bvf77r" path="res://2d/creatures/player/sheriff.tres" id="2_4758m"]

[node name="Reward" type="MarginContainer"]
offset_right = 128.0
offset_bottom = 32.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_57cg7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="VBoxContainer/Control"]
unique_name_in_owner = true
position = Vector2(64, 64)
scale = Vector2(8, 8)
sprite_frames = ExtResource("2_4758m")
autoplay = "default"
frame_progress = 0.924183

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CHOOSE"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
